test/tests/errors/error-assign-val.sm
// true
// false
/**/
/**/

program {
    5 = 1;
}